# Quant-Backtesting-Engine

./: .gitignore  CMakeLists.txt  README.md
data/: btc.csv
include/core/: BaseStrategy.h  Broker.h  CSVReader.h  DataFeed.h  Engine.h  Indicators.h  Portfolio.h  Position.h
include/models/: BacktestConfig.h  BollingerBands.h  OpenHighLowCloseVolume.h  Stats.h  Stochastic.h  StrategySignal.h  Trade.h
include/strategies/: BaseStrategy.h  BollingerBandMeanReversion.h  MovingAveragePriceCrossover.h  StochasticOscillatorCrossover.h
include/utils/: CSVReader.h  CSVWriter.h  Logger.h  Math.h  Time.h
market_data_fetcher/: market_data_fetcher.py
python_scripts/: market_data_fetcher.py  requirements.txt  results_visualiser.ipynb
results/: closed_positions.csv
src/: main.cpp  test.cpp
src/broker/: Broker.cpp  Broker.h
src/core/: BaseStrategy.cpp  Broker.cpp  CSVReader.cpp  DataFeed.cpp  DataFeed.h  Engine.cpp  Engine.h  Indicators.cpp  OpenHighLowCloseVolume.cpp  OpenHighLowCloseVolume.h  Portfolio.cpp  Position.cpp
src/indicators/: Indicators.cpp  Indicators.h
src/models/: StrategySignal.h  Trade.h
src/strategies/: BaseStrategy.cpp  BaseStrategy.h  BollingerBandMeanReversion.cpp  MovingAveragePriceCrossover.cpp  StochasticOscillatorCrossover.cpp
src/utils/: CSVReader.cpp  Logger.cpp
